r2e-compile-tests/cases/plugins/fail/prestate_plugin_passed_to_with.stderr
error[E0277]: `MyPreStatePlugin` does not implement `Plugin`, the post-state plugin API used by `.with()`
  --> cases/plugins/fail/prestate_plugin_passed_to_with.rs:31:19
   |
31 |             .with(MyPreStatePlugin)
   |              ---- ^^^^^^^^^^^^^^^^ `.with()` needs a post-state `Plugin`
   |              |
   |              required by a bound introduced by this call
   |
help: the trait `Plugin` is not implemented for `MyPreStatePlugin`
  --> cases/plugins/fail/prestate_plugin_passed_to_with.rs:13:1
   |
13 | pub struct MyPreStatePlugin;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: if `MyPreStatePlugin` is a pre-state plugin (it provides beans), install it with `.plugin(MyPreStatePlugin)` BEFORE `build_state()` instead of `.with(MyPreStatePlugin)`
   = help: the following other types implement trait `Plugin`:
             AdvancedHealth
             ConfiguredTracing
             Cors
             DevReload
             EmbeddedFrontend
             ErrorHandling
             Health
             NormalizePath
           and $N others
note: required by a bound in `builder::typed::<impl r2e::AppBuilder<T>>::with`
  --> $WORKSPACE/r2e-core/src/builder/typed.rs
   |
   |     pub fn with<Pl: Plugin>(mut self, plugin: Pl) -> Self {
   |                     ^^^^^^ required by this bound in `builder::typed::<impl AppBuilder<T>>::with`
